tiger_compiler/grammar.output
   0  $accept : %entry% $end

   1  program : exp EOF

   2  exp : NIL
   3      | LPAREN expseq RPAREN
   4      | ID LPAREN funcexpseq RPAREN
   5      | ID LPAREN RPAREN
   6      | arith
   7      | comp
   8      | bool
   9      | ID LBRACE idexpseq RBRACE
  10      | ID LBRACE RBRACE
  11      | ID LBRACK exp RBRACK OF exp
  12      | IF exp THEN exp ELSE exp
  13      | IF exp THEN exp
  14      | WHILE exp DO exp
  15      | FOR ID ASSIGN exp TO exp DO exp
  16      | BREAK
  17      | LET decs IN expseq END
  18      | INT
  19      | STRING
  20      | lvalue
  21      | stmt
  22      | LPAREN RPAREN

  23  stmt : ID ASSIGN exp
  24       | lvalue ASSIGN exp

  25  funcexpseq : exp
  26             | exp COMMA funcexpseq

  27  idexpseq : ID EQ exp
  28           | ID EQ exp COMMA idexpseq

  29  arith : exp PLUS exp
  30        | exp MINUS exp
  31        | exp TIMES exp
  32        | exp DIVIDE exp
  33        | MINUS exp

  34  comp : exp EQ exp
  35       | exp LE exp
  36       | exp GE exp
  37       | exp GT exp
  38       | exp LT exp
  39       | exp NEQ exp

  40  bool : exp AND exp
  41       | exp OR exp

  42  expseq : exp
  43         | exp SEMICOLON expseq

  44  decs : tydecs not_tydecs
  45       | vardec decs
  46       | fundecs not_fundecs
  47       |

  48  not_fundecs : tydecs not_tydecs
  49              | vardec decs
  50              |

  51  not_tydecs : fundecs not_fundecs
  52             | vardec decs
  53             |

  54  dec : tydecs
  55      | vardec
  56      | fundecs

  57  tydecs : tydec tydecs
  58         | tydec

  59  tydec : TYPE type_id EQ ty

  60  ty : type_id
  61     | LBRACE tyfields RBRACE
  62     | ARRAY OF type_id

  63  tyfields : ID COLON type_id
  64           | ID COLON type_id COMMA tyfields
  65           |

  66  vardec : VAR ID ASSIGN exp
  67         | VAR ID COLON type_id ASSIGN exp

  68  fundecs : fundec fundecs
  69          | fundec

  70  fundec : FUNCTION ID LPAREN tyfields RPAREN EQ exp
  71         | FUNCTION ID LPAREN tyfields RPAREN COLON type_id EQ exp

  72  lvalue : ID
  73         | lvalue DOT ID
  74         | lvalue LBRACK exp RBRACK
  75         | ID LBRACK exp RBRACK

  76  type_id : ID

  77  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (77)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	program  goto 14
	exp  goto 15
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 2
	$accept : %entry% . $end  (0)

	$end  accept


3: shift/reduce conflict (shift 22, reduce 72) on LBRACK
3: shift/reduce conflict (shift 24, reduce 72) on ASSIGN
state 3
	exp : ID . LPAREN funcexpseq RPAREN  (4)
	exp : ID . LPAREN RPAREN  (5)
	exp : ID . LBRACE idexpseq RBRACE  (9)
	exp : ID . LBRACE RBRACE  (10)
	exp : ID . LBRACK exp RBRACK OF exp  (11)
	stmt : ID . ASSIGN exp  (23)
	lvalue : ID .  (72)
	lvalue : ID . LBRACK exp RBRACK  (75)

	LPAREN  shift 21
	LBRACK  shift 22
	LBRACE  shift 23
	ASSIGN  shift 24
	EOF  reduce 72
	COMMA  reduce 72
	SEMICOLON  reduce 72
	RPAREN  reduce 72
	RBRACK  reduce 72
	RBRACE  reduce 72
	DOT  reduce 72
	PLUS  reduce 72
	MINUS  reduce 72
	TIMES  reduce 72
	DIVIDE  reduce 72
	EQ  reduce 72
	NEQ  reduce 72
	LT  reduce 72
	LE  reduce 72
	GT  reduce 72
	GE  reduce 72
	AND  reduce 72
	OR  reduce 72
	THEN  reduce 72
	ELSE  reduce 72
	TO  reduce 72
	DO  reduce 72
	IN  reduce 72
	END  reduce 72
	FUNCTION  reduce 72
	VAR  reduce 72
	TYPE  reduce 72


state 4
	exp : INT .  (18)

	.  reduce 18


state 5
	exp : STRING .  (19)

	.  reduce 19


state 6
	exp : LPAREN . expseq RPAREN  (3)
	exp : LPAREN . RPAREN  (22)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	RPAREN  shift 25
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 26
	expseq  goto 27
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 7
	arith : MINUS . exp  (33)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 28
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 8
	exp : IF . exp THEN exp ELSE exp  (12)
	exp : IF . exp THEN exp  (13)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 29
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 9
	exp : WHILE . exp DO exp  (14)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 30
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 10
	exp : FOR . ID ASSIGN exp TO exp DO exp  (15)

	ID  shift 31
	.  error


state 11
	exp : LET . decs IN expseq END  (17)
	decs : .  (47)

	FUNCTION  shift 32
	VAR  shift 33
	TYPE  shift 34
	IN  reduce 47

	decs  goto 35
	tydecs  goto 36
	vardec  goto 37
	fundecs  goto 38
	tydec  goto 39
	fundec  goto 40


state 12
	exp : BREAK .  (16)

	.  reduce 16


state 13
	exp : NIL .  (2)

	.  reduce 2


state 14
	%entry% : '\001' program .  (77)

	.  reduce 77


state 15
	program : exp . EOF  (1)
	arith : exp . PLUS exp  (29)
	arith : exp . MINUS exp  (30)
	arith : exp . TIMES exp  (31)
	arith : exp . DIVIDE exp  (32)
	comp : exp . EQ exp  (34)
	comp : exp . LE exp  (35)
	comp : exp . GE exp  (36)
	comp : exp . GT exp  (37)
	comp : exp . LT exp  (38)
	comp : exp . NEQ exp  (39)
	bool : exp . AND exp  (40)
	bool : exp . OR exp  (41)

	EOF  shift 41
	PLUS  shift 42
	MINUS  shift 43
	TIMES  shift 44
	DIVIDE  shift 45
	EQ  shift 46
	NEQ  shift 47
	LT  shift 48
	LE  shift 49
	GT  shift 50
	GE  shift 51
	AND  shift 52
	OR  shift 53
	.  error


state 16
	exp : arith .  (6)

	.  reduce 6


state 17
	exp : comp .  (7)

	.  reduce 7


state 18
	exp : bool .  (8)

	.  reduce 8


state 19
	exp : lvalue .  (20)
	stmt : lvalue . ASSIGN exp  (24)
	lvalue : lvalue . DOT ID  (73)
	lvalue : lvalue . LBRACK exp RBRACK  (74)

	LBRACK  shift 54
	DOT  shift 55
	ASSIGN  shift 56
	EOF  reduce 20
	COMMA  reduce 20
	SEMICOLON  reduce 20
	RPAREN  reduce 20
	RBRACK  reduce 20
	RBRACE  reduce 20
	PLUS  reduce 20
	MINUS  reduce 20
	TIMES  reduce 20
	DIVIDE  reduce 20
	EQ  reduce 20
	NEQ  reduce 20
	LT  reduce 20
	LE  reduce 20
	GT  reduce 20
	GE  reduce 20
	AND  reduce 20
	OR  reduce 20
	THEN  reduce 20
	ELSE  reduce 20
	TO  reduce 20
	DO  reduce 20
	IN  reduce 20
	END  reduce 20
	FUNCTION  reduce 20
	VAR  reduce 20
	TYPE  reduce 20


state 20
	exp : stmt .  (21)

	.  reduce 21


state 21
	exp : ID LPAREN . funcexpseq RPAREN  (4)
	exp : ID LPAREN . RPAREN  (5)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	RPAREN  shift 57
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 58
	funcexpseq  goto 59
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 22
	exp : ID LBRACK . exp RBRACK OF exp  (11)
	lvalue : ID LBRACK . exp RBRACK  (75)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 60
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 23
	exp : ID LBRACE . idexpseq RBRACE  (9)
	exp : ID LBRACE . RBRACE  (10)

	ID  shift 61
	RBRACE  shift 62
	.  error

	idexpseq  goto 63


state 24
	stmt : ID ASSIGN . exp  (23)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 64
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 25
	exp : LPAREN RPAREN .  (22)

	.  reduce 22


state 26
	arith : exp . PLUS exp  (29)
	arith : exp . MINUS exp  (30)
	arith : exp . TIMES exp  (31)
	arith : exp . DIVIDE exp  (32)
	comp : exp . EQ exp  (34)
	comp : exp . LE exp  (35)
	comp : exp . GE exp  (36)
	comp : exp . GT exp  (37)
	comp : exp . LT exp  (38)
	comp : exp . NEQ exp  (39)
	bool : exp . AND exp  (40)
	bool : exp . OR exp  (41)
	expseq : exp .  (42)
	expseq : exp . SEMICOLON expseq  (43)

	SEMICOLON  shift 65
	PLUS  shift 42
	MINUS  shift 43
	TIMES  shift 44
	DIVIDE  shift 45
	EQ  shift 46
	NEQ  shift 47
	LT  shift 48
	LE  shift 49
	GT  shift 50
	GE  shift 51
	AND  shift 52
	OR  shift 53
	RPAREN  reduce 42
	END  reduce 42


state 27
	exp : LPAREN expseq . RPAREN  (3)

	RPAREN  shift 66
	.  error


state 28
	arith : exp . PLUS exp  (29)
	arith : exp . MINUS exp  (30)
	arith : exp . TIMES exp  (31)
	arith : exp . DIVIDE exp  (32)
	arith : MINUS exp .  (33)
	comp : exp . EQ exp  (34)
	comp : exp . LE exp  (35)
	comp : exp . GE exp  (36)
	comp : exp . GT exp  (37)
	comp : exp . LT exp  (38)
	comp : exp . NEQ exp  (39)
	bool : exp . AND exp  (40)
	bool : exp . OR exp  (41)

	.  reduce 33


state 29
	exp : IF exp . THEN exp ELSE exp  (12)
	exp : IF exp . THEN exp  (13)
	arith : exp . PLUS exp  (29)
	arith : exp . MINUS exp  (30)
	arith : exp . TIMES exp  (31)
	arith : exp . DIVIDE exp  (32)
	comp : exp . EQ exp  (34)
	comp : exp . LE exp  (35)
	comp : exp . GE exp  (36)
	comp : exp . GT exp  (37)
	comp : exp . LT exp  (38)
	comp : exp . NEQ exp  (39)
	bool : exp . AND exp  (40)
	bool : exp . OR exp  (41)

	PLUS  shift 42
	MINUS  shift 43
	TIMES  shift 44
	DIVIDE  shift 45
	EQ  shift 46
	NEQ  shift 47
	LT  shift 48
	LE  shift 49
	GT  shift 50
	GE  shift 51
	AND  shift 52
	OR  shift 53
	THEN  shift 67
	.  error


state 30
	exp : WHILE exp . DO exp  (14)
	arith : exp . PLUS exp  (29)
	arith : exp . MINUS exp  (30)
	arith : exp . TIMES exp  (31)
	arith : exp . DIVIDE exp  (32)
	comp : exp . EQ exp  (34)
	comp : exp . LE exp  (35)
	comp : exp . GE exp  (36)
	comp : exp . GT exp  (37)
	comp : exp . LT exp  (38)
	comp : exp . NEQ exp  (39)
	bool : exp . AND exp  (40)
	bool : exp . OR exp  (41)

	PLUS  shift 42
	MINUS  shift 43
	TIMES  shift 44
	DIVIDE  shift 45
	EQ  shift 46
	NEQ  shift 47
	LT  shift 48
	LE  shift 49
	GT  shift 50
	GE  shift 51
	AND  shift 52
	OR  shift 53
	DO  shift 68
	.  error


state 31
	exp : FOR ID . ASSIGN exp TO exp DO exp  (15)

	ASSIGN  shift 69
	.  error


state 32
	fundec : FUNCTION . ID LPAREN tyfields RPAREN EQ exp  (70)
	fundec : FUNCTION . ID LPAREN tyfields RPAREN COLON type_id EQ exp  (71)

	ID  shift 70
	.  error


state 33
	vardec : VAR . ID ASSIGN exp  (66)
	vardec : VAR . ID COLON type_id ASSIGN exp  (67)

	ID  shift 71
	.  error


state 34
	tydec : TYPE . type_id EQ ty  (59)

	ID  shift 72
	.  error

	type_id  goto 73


state 35
	exp : LET decs . IN expseq END  (17)

	IN  shift 74
	.  error


state 36
	decs : tydecs . not_tydecs  (44)
	not_tydecs : .  (53)

	FUNCTION  shift 32
	VAR  shift 33
	IN  reduce 53

	not_tydecs  goto 75
	vardec  goto 76
	fundecs  goto 77
	fundec  goto 40


state 37
	decs : vardec . decs  (45)
	decs : .  (47)

	FUNCTION  shift 32
	VAR  shift 33
	TYPE  shift 34
	IN  reduce 47

	decs  goto 78
	tydecs  goto 36
	vardec  goto 37
	fundecs  goto 38
	tydec  goto 39
	fundec  goto 40


state 38
	decs : fundecs . not_fundecs  (46)
	not_fundecs : .  (50)

	VAR  shift 33
	TYPE  shift 34
	IN  reduce 50

	tydecs  goto 79
	vardec  goto 80
	not_fundecs  goto 81
	tydec  goto 39


state 39
	tydecs : tydec . tydecs  (57)
	tydecs : tydec .  (58)

	TYPE  shift 34
	IN  reduce 58
	FUNCTION  reduce 58
	VAR  reduce 58

	tydecs  goto 82
	tydec  goto 39


state 40
	fundecs : fundec . fundecs  (68)
	fundecs : fundec .  (69)

	FUNCTION  shift 32
	IN  reduce 69
	VAR  reduce 69
	TYPE  reduce 69

	fundecs  goto 83
	fundec  goto 40


state 41
	program : exp EOF .  (1)

	.  reduce 1


state 42
	arith : exp PLUS . exp  (29)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 84
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 43
	arith : exp MINUS . exp  (30)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 85
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 44
	arith : exp TIMES . exp  (31)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 86
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 45
	arith : exp DIVIDE . exp  (32)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 87
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 46
	comp : exp EQ . exp  (34)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 88
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 47
	comp : exp NEQ . exp  (39)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 89
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 48
	comp : exp LT . exp  (38)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 90
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 49
	comp : exp LE . exp  (35)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 91
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 50
	comp : exp GT . exp  (37)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 92
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 51
	comp : exp GE . exp  (36)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 93
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 52
	bool : exp AND . exp  (40)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 94
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 53
	bool : exp OR . exp  (41)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 95
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 54
	lvalue : lvalue LBRACK . exp RBRACK  (74)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 96
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 55
	lvalue : lvalue DOT . ID  (73)

	ID  shift 97
	.  error


state 56
	stmt : lvalue ASSIGN . exp  (24)

	ID  shift 3
	INT  shift 4
	STRING  shift 5
	LPAREN  shift 6
	MINUS  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	LET  shift 11
	BREAK  shift 12
	NIL  shift 13
	.  error

	exp  goto 98
	arith  goto 16
	comp  goto 17
	bool  goto 18
	lvalue  goto 19
	stmt  goto 20


state 57
	exp : ID LPAREN RPAREN .  (5)

	.  reduce 5


state 58
	funcexpseq : exp .  (25)
	funcexpseq : exp . COMMA funcexpseq  (26)
	arith : exp . PLUS exp  (29)
	arith : exp . MINUS exp  (30)
	arith : exp . TIMES exp  (31)
	arith : exp . DIVIDE exp  (32)
	comp : exp . EQ exp  (34)
	comp : exp . LE exp  (35)
	comp : exp . GE exp  (36)
	comp : exp . GT exp  (37)
	comp : exp . LT exp  (38)
	comp : exp . NEQ exp  (39)
	bool : exp . AND exp  (40)
	bool : exp . OR exp  (41)

	COMMA  shift 99
	PLUS  shift 42
	MINUS  shift 43
	TIMES  shift 44
	DIVIDE  shift 45
	EQ  shift 46
	NEQ  shift 47
	LT  shift 48
	LE  shift 49
	GT  shift 50
	GE  shift 51
	AND  shift 52
	OR  shift 53
	RPAREN  reduce 25


state 59
	exp : ID LPAREN funcexpseq . RPAREN  (4)

	RPAREN  shift 100
	.  error


state 60
	exp : ID LBRACK exp . RBRACK OF exp  (11)
	arith : exp . PLUS exp  (29)
	arith : exp . MINUS exp  (30)
	arith : exp . TIMES exp  (31)
	arith : exp . DIVIDE exp  (32)
	comp : exp . EQ exp  (34)
	comp : exp . LE exp  (35)
	comp : exp . GE exp  (36)
	comp : exp . GT exp  (37)
	comp : exp . LT exp  (38)
	comp : exp . NEQ exp  (39)
	bool : exp . AND exp  (40)
	bool : exp . OR exp  (41)
	lvalue : ID LBRACK exp . RBRACK  (75)

	RBRACK  shift 101
	PLUS  shift 42
	MINUS  shift 43
	TIMES  shift 44
	DIVIDE  shift 45
	EQ  shift 46
	NEQ  shift 47
	LT  shift 48
	LE  shift 49
	GT  shift 50
	GE  shift 51
	AND  shift 52
	OR  shift 53
	.  error


state 61
	idexpseq : ID . EQ exp  (27)
	idexpseq : ID . EQ exp COMMA idexpseq  (28)

	EQ  shift 102
	.  error

